# beancount-format

./: .gitignore  .npmignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  Cargo.toml  README.md  dprint.json  index.d.ts  index.js  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  rust-toolchain.toml  rustfmt.toml  taskfile.yaml  test.js
.github/: copilot-instructions.md  mergify.yml  renovate.json
.github/workflows/: _build_wheels.yaml  autofix.yaml  ci.yml  lint.yaml  publish.yml  python.yml  release-github.yaml  release.yaml  wasm.yaml  wasm.yml
beancount_format/: __main__.py  cli.py  format.py
crates/beancount-formatter/: Cargo.toml
crates/beancount-formatter-cli/: Cargo.toml
crates/beancount-formatter-cli/src/: lib.rs  main.rs
crates/beancount-formatter-cli/tests/: cli_e2e.rs
crates/beancount-formatter-py/: Cargo.toml
crates/beancount-formatter-py/src/: lib.rs
crates/beancount-formatter/src/: ast.rs  format.rs  format_text.rs  lib.rs  parse.rs
crates/beancount-formatter/src/configuration/: builder.rs  config_types.rs  configuration.rs  mod.rs  new_line_kind.rs  resolve_config.rs
crates/beancount-formatter/tests/: format_cases.rs  formatting.rs  meta.rs
crates/beancount-formatter/tests/format-and-check/: applies_configured_crlf_newlines.config.json  applies_configured_crlf_newlines.input.bean  caps_blank_lines_between_directives.expected.bean  caps_blank_lines_between_directives.input.bean  comment_before_transaction.expected.bean  comment_before_transaction.input.bean  compact_balance_spacing.config.json  compact_balance_spacing.expected.bean  compact_balance_spacing.input.bean  formats_all_directives.config.json  formats_all_directives.expected.bean  formats_all_directives.input.bean  formats_transaction_preserves_postings.expected.bean  formats_transaction_preserves_postings.input.bean  formats_without_changes_returns_none.expected.bean  formats_without_changes_returns_none.input.bean  normalizes_sign_spacing.expected.bean  normalizes_sign_spacing.input.bean  normalizes_tabs_and_trailing_spaces.expected.bean  normalizes_tabs_and_trailing_spaces.input.bean  preserve-meta.expected.bean  preserve-meta.input.bean  preserve_binary_number_spacing.config.json  preserve_binary_number_spacing.expected.bean  preserve_comments.expected.bean  preserve_comments.input.bean  preserve_file_path_header.expected.bean  preserve_file_path_header.input.bean  support_input_without_eol.expected.bean
crates/dprint-plugin-beancount/: Cargo.toml
crates/dprint-plugin-beancount/src/: lib.rs
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
dprint-plugin-beancount/: latest.json
dprint-plugin-beancount/0.2.1/: schema.json
examples/: 1.bean  18.bean
patches/language/: Cargo.toml
patches/tree-sitter-language/: Cargo.toml
patches/tree-sitter-language-0.1.6/: Cargo.toml
patches/tree-sitter-language-0.1.6/src/: language.rs
patches/tree-sitter-language-0.1.6/wasm/src/: stdlib.c
patches/tree-sitter-language/wasm/src/: stdlib.c
python/: README.md
python/src/bean_format/: __init__.py  bean_format.pyi
python/src/beancount_format/: __init__.py  beancount_format.pyi
python/tests/: test_smoke.py
scripts/: generate_plugin_assets.py  generate_release_notes.ts  update_versions.py
tests/: test.rs
