[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.26"
authors = ["Trim21 <trim21.me@gmail.com>"]
edition = "2024"
homepage = "https://github.com/trim21/beancount-format"
license = "MIT"
repository = "https://github.com/trim21/beancount-format"
description = "Beancount formatter library and tooling."

[workspace.dependencies]
anyhow = "1.0.101"
beancount-formatter = { path = "./crates/beancount-formatter/" }
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "3ae5a0620807a313f0d989a1992d880b842e0d77" }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
