[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.1"
authors = ["Trim21 <trim21.me@gmail.com>"]
edition = "2024"
homepage = "https://github.com/trim21/beancount-format"
license = "MIT"
repository = "https://github.com/trim21/beancount-format"
description = "Beancount formatter library and tooling."

[workspace.dependencies]
anyhow = "1.0.102"
beancount-formatter = { path = "./crates/beancount-formatter/" }
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "0c9bc30cec4d6f662eaafbcc4c3926e21b1ca8fd" }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
