[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "bean-format"
version = "0.1.3"
description = "Beancount formatter powered by dprint-plugin-beancount"
authors = [{ name = "David Sherret", email = "dsherret@gmail.com" }]
readme = "python/README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[tool.maturin]
manifest-path = "crates/beancount-formatter-py/Cargo.toml"
module-name = "bean_format"
features = ["python"]
strip = true
python-source = "python/src"

[tool.uv]
package = false

[dependency-groups]
dev = ["maturin>=1.11.5", "pytest>=9.0.2", "ruff>=0.14.12"]
