[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "beancount-format"
version = "0.1.17"
description = "Beancount formatter powered by dprint-plugin-beancount"
authors = [{ name = "trim21", email = "trim21.me@gmail.com" }]
license = { file = "LICENSE" }
readme = "python/README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
beancount-format = "beancount_format:main"

[dependency-groups]
dev = ["maturin==1.11.5", "pytest==9.0.2", "ruff==0.14.14"]

[tool.maturin]
manifest-path = "crates/beancount-formatter-py/Cargo.toml"
module-name = "beancount_format"
strip = true
python-source = "python/src"

[tool.uv]
package = false

[tool.pyright]
extraPaths = ["python/src/"]
