[build-system]
requires = ["maturin==1.12.4"]
build-backend = "maturin"

[project]
name = "beancount-format"
version = "0.1.26"
requires-python = ">=3.10"
description = "Beancount formatter powered by dprint-plugin-beancount"
authors = [{ name = "trim21", email = "trim21.me@gmail.com" }]
readme = "python/README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.scripts]
beancount-format = "beancount_format:main"

[dependency-groups]
dev = ["maturin==1.12.4", "pytest==9.0.2", "ruff==0.15.2"]

[tool.maturin]
manifest-path = "crates/beancount-formatter-py/Cargo.toml"
module-name = "beancount_format"
strip = true
python-source = "python/src"
include = [{ path = "patches/**/*", format = "sdist" }]

[tool.uv]
package = false

[tool.pyright]
extraPaths = ["python/src/"]
