[package]
name = "beancount-formatter-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the beancount formatter."
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
beancount-formatter = { workspace = true }
toml.workspace = true
serde.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1.3"
predicates = "3.1"

[[bin]]
name = "beancount-formatter"
path = "src/main.rs"
