[package]
name = "beancount-formatter-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "CLI for the beancount formatter."

[dependencies]
anyhow.workspace = true
beancount-formatter = { workspace = true }
clap.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"

[[bin]]
name = "beancount-format"
path = "src/main.rs"
