[package]
name = "beancount-formatter-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "CLI for the beancount formatter."

[dependencies]
anyhow = { workspace = true }
beancount-formatter = { workspace = true }
clap = { version = "4.5.55", features = ["derive"] }
serde = { workspace = true }
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"

[[bin]]
name = "beancount-format"
path = "src/main.rs"
