[package]
name = "beancount-formatter-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for the beancount formatter."
publish = false

[lib]
name = "bean_format"
crate-type = ["cdylib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
beancount-formatter = { workspace = true }
pyo3 = { version = "0.27.2", optional = true, features = [
  "abi3",
  "abi3-py310",
  "extension-module"
] }
