[package]
name = "beancount-formatter-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Python bindings for the beancount formatter."

[lib]
name = "beancount_format"
crate-type = ["cdylib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
beancount-formatter = { workspace = true }
pyo3 = { version = "0.27.2", optional = true, features = ["abi3", "abi3-py310", "extension-module"] }
