[package]
name = "beancount-formatter-py"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
description = "Python bindings for the beancount formatter."

[lib]
crate-type = ["cdylib"]

[dependencies]
beancount-formatter = { workspace = true }
beancount-formatter-cli = { path = "../beancount-formatter-cli/" }
pyo3 = { version = "0.27.2", features = ["abi3", "abi3-py310", "generate-import-lib"] }
