[package]
name = "beancount-formatter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core beancount formatter logic."

[dependencies]
anyhow = { workspace = true }
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "8b4e3311258194fe3127862dd4132028e97cc01d" }
serde = { workspace = true }
# beancount-parser = { path = "../../../beancount/beancount/" }
# beancount-parser = { path = "../../../beancount/beancount/crates/beancount-parser/" }
tree-sitter = { version = "0.26.3" }

[dev-dependencies]
serde_json = "1.0.149"
similar = { version = "2.7.0", features = ["unicode"] }
