[package]
name = "beancount-formatter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core beancount formatter logic."

[dependencies]
anyhow = { workspace = true }
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "ece1dc85f7aa2a96df4501a2814f3087488fd85f" }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1.0.149"
similar = { version = "2.7.0", features = ["unicode"] }
