[package]
name = "dprint-plugin-beancount"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Beancount formatter for dprint."

[features]
default = []

# wasm = ["dprint-core/wasm"]
[lib]
# for wasm
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
dprint-core = { version = "0.67.4", features = ["formatting", "wasm"] }
beancount-formatter = { path = "../beancount-formatter" }
serde_json = "1.0.149"
once_cell = "1.21.3"
dlmalloc = { version = "0.2.12", features = ["global"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# tree-sitter-language = "0.1.6"
