[package]
name = "dprint-plugin-beancount"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Beancount formatter for dprint."

[lib]
# for wasm
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
beancount-formatter = { path = "../beancount-formatter" }
dprint-core = { version = "0.67.4", features = ["formatting", "wasm"] }
serde_json = "1.0.149"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# tree-sitter-language = "0.1.6"
