[package]
name = "tree-sitter-language"
description = "The tree-sitter Language type, used by the library and by language implementations"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/tree-sitter-language"
categories = ["api-bindings", "development-tools::ffi", "parsing"]
build = "build.rs"
links = "tree-sitter-language"

[lib]
path = "src/language.rs"
